grammar.js
    compilation_unit: $ => repeat($._node),

    // A node can be HTML content, a Razor construct, or an HTML element
    // At top level, text uses keyword-aware scanner to stop before else/catch/finally
    _node: $ => choice(
      $.doctype,
      alias($._script_element, $.element),
      alias($._style_element, $.element),
      alias($._title_element, $.element),
      alias($._textarea_element, $.element),
      $.element,
      $.self_closing_element,
      $.void_element,
      $.html_comment,
      $.razor_comment,  // Razor comments at top level
      $.razor_directive,
      $.razor_code_block,
      $.razor_statement,
      $.razor_explicit_expression,
      $.razor_implicit_expression,
      $.escaped_at,
      $.html_character_reference,
      $._top_level_text,
    ),

    // HTML DOCTYPE declaration - handled by external scanner to avoid conflicts
    doctype: $ => $._doctype,

    // @@ escapes to a literal @ character
    html_character_reference: _ => /&(#[0-9]+|#[xX][0-9a-fA-F]+|[a-zA-Z][a-zA-Z0-9]*);/,

    // =========================================================================
    // Razor Statements (@if, @foreach, etc.)
    // =========================================================================

    // Razor statement uses @keyword as a single token for consistent highlighting
    _razor_block_content: $ => choice(
      alias($._nested_razor_statement, $.razor_statement),  // Razor control flow like @if, @foreach, etc.
      alias($._nested_razor_explicit_expression, $.razor_explicit_expression),
      alias($._nested_razor_implicit_expression, $.razor_implicit_expression),
      $.element,
      $.self_closing_element,
      $.void_element,
      $.razor_text_literal,
      alias($._razor_block_comment, $.razor_comment),
      $._razor_statement,
    ),

    // Nested Razor statement inside a block
    // Must use external scanner $._razor_block_at to capture @ in C# context,
    // because token(prec()) doesn't help when C# lexer matches @identifier first
    element: $ => seq(
      $.start_tag,
      repeat($._element_content),
      $.end_tag,
    ),

    // Void elements are HTML elements that cannot have content and must not have an end tag
    // https://html.spec.whatwg.org/multipage/syntax.html#void-elements
    // area, base, br, col, embed, hr, img, input, link, meta, source, track, wbr
    void_element: $ => seq(
      alias($._html_tag_open, '<'),
      alias($._void_tag_name, $.tag_name),
      repeat($._html_attribute),
      optional('/'),
      alias($._html_tag_close, '>'),
    ),

    // Case-insensitive void element names
    _void_tag_name: _ => token.immediate(choice(
      /area/i,
      /base/i,
      /br/i,
      /col/i,
      /embed/i,
      /hr/i,
      /img/i,
      /input/i,
      /link/i,
      /meta/i,
      /source/i,
      /track/i,
      /wbr/i,
    )),

    // Content inside elements - doesn't need keyword awareness
    _element_content: $ => choice(
      alias($._script_element, $.element),
      alias($._style_element, $.element),
      alias($._title_element, $.element),
      alias($._textarea_element, $.element),
      $.element,
      $.self_closing_element,
      $.void_element,
      $.html_comment,
      $.razor_comment,  // Razor comments inside elements
      $.razor_directive,
      $.razor_code_block,
      $.razor_statement,
      $.razor_explicit_expression,
      $.razor_implicit_expression,
      $.escaped_at,
      $.html_character_reference,
      $.text,  // Regular text, not keyword-aware
    ),

    // Note: Tag helper opt-out (!) is handled by the external scanner as part of
    // _html_tag_open and _html_end_tag_open (they match <, <!, </, and </!)
    self_closing_element: $ => seq(
      alias($._html_tag_open, '<'),
      alias($._immediate_tag_name, $.tag_name),
      repeat($._html_attribute),
      '/',
      alias($._html_tag_close, '>'),
    ),

    start_tag: $ => seq(
      alias($._html_tag_open, '<'),
      alias($._immediate_tag_name, $.tag_name),
      repeat($._html_attribute),
      alias($._html_tag_close, '>'),
    ),

    end_tag: $ => seq(
      alias($._html_end_tag_open, '</'),
      alias($._immediate_tag_name, $.tag_name),
      alias($._html_tag_close, '>'),
    ),

    // Element name that must immediately follow < or </ (or ! if opt-out)
    // Includes . for Blazor fully-qualified component names like NTExtractor.Components.Admin.Extractor
    _immediate_tag_name: _ => token.immediate(/[a-zA-Z][a-zA-Z0-9.:-]*/),

    // =========================================================================
    // Script and Style Elements
    // =========================================================================

    // Script elements contain raw JavaScript content that shouldn't be parsed as HTML
    // Higher precedence than regular elements to ensure <script> is matched first
    // Aliased to `element` so queries can match all elements uniformly
    _html_attribute: $ => choice(
      $.html_attribute,
      $.escaped_attribute,
      $.dynamic_attribute,  // Must come before razor_attribute (both start with @)
      $.razor_attribute,
      $.at_star_attribute,  // @* as attribute name (not Razor comment in tag context)
    ),

    html_attribute: $ => choice(
      // Attribute with value: name="value" or name = "value"
      seq(
        $.html_attribute_name,
        '=',
        $.html_attribute_value,
      ),
      // Boolean attribute: name (no value)
      $.html_attribute_name,
    ),

    // HTML attribute name per HTML spec - excludes control characters, space, quotes,
    // slash, equals, and noncharacters. Also excludes @ (handled by razor_attribute).
    // This allows special attribute syntaxes like [item], (click), *directive, #local
    // See: https://html.spec.whatwg.org/multipage/syntax.html#attributes-2
    html_attribute_name: _ => /[^\u0000-\u001F\u007F-\u009F \n\r\t\f"'>/=@\uFDD0-\uFDEF\uFFFE\uFFFF]+/u,

    html_attribute_value: $ => choice(
      $.html_quoted_attribute_value,
      // Razor expressions as unquoted values: Property=@(s => s.Id) or Items=@Model.Items
      $.razor_explicit_expression,
      $.razor_implicit_expression,
      // Plain unquoted value (no @ or Razor): class=my-class
      $.html_unquoted_attribute_value,
    ),

    html_quoted_attribute_value: $ => choice(
      seq('"', optional($._html_double_quoted_attribute_content), '"'),
      seq("'", optional($._html_single_quoted_attribute_content), "'"),
    ),

    _html_double_quoted_attribute_content: $ => repeat1(choice(
      /[^"@&]+/,
      // Email/literal @ in attribute values (e.g., mailto:user@example.com)
      $._text_with_literal_at,
      $.html_character_reference,
      $.razor_explicit_expression,
      $.razor_implicit_expression,
      // Escaped @@ in attribute values
      $.escaped_at,
    )),

    _html_single_quoted_attribute_content: $ => repeat1(choice(
      /[^'@&]+/,
      // Email/literal @ in attribute values
      $._text_with_literal_at,
      $.html_character_reference,
      $.razor_explicit_expression,
      $.razor_implicit_expression,
      // Escaped @@ in attribute values
      $.escaped_at,
    )),

    // Plain unquoted attribute value (no @ or Razor): class=my-class
    razor_attribute: $ => choice(
      // With value: @onclick="handler"
      seq(
        '@',
        alias($._immediate_html_attribute_name, $.html_attribute_name),
        '=',
        $.html_attribute_value,
      ),
      // Without value: @rendermode
      seq('@', alias($._immediate_html_attribute_name, $.html_attribute_name)),
    ),

    // Escaped attribute name (@@attr) - produces literal @attr as attribute name
    // e.g., <p @@attr="value" /> or <p @@attr />
    _immediate_html_attribute_name: _ => token.immediate(/[a-zA-Z_:][^\u0000-\u001F\u007F-\u009F \n\r\t\f"'>/=@\uFDD0-\uFDEF\uFFFE\uFFFF]*/u),

    // @* as an HTML attribute name (not a Razor comment when in tag context)
    // Per HTML spec, @* is a valid attribute name. In Razor files, this takes
    // lower precedence than Razor comments in content positions, but inside
    // HTML tags it should be treated as an attribute name.
    // e.g., <div @* foo=bar *@> outputs the same in HTML
    razor_comment: $ => $._razor_comment,

    // Razor comment inside C# blocks - uses external scanner for @* to beat C# @identifier
    html_comment: $ => $._html_comment,

    // Override C# comment to use external scanner for context-awareness
    // This ensures comments only match in C# context, not HTML
    comment: $ => $._csharp_comment,

    // =========================================================================
    // C# Preprocessor Directives (context-aware overrides)
    // =========================================================================
    // These override the C# grammar's preproc rules to use external scanner tokens
    // that only match in C# context, ensuring directives don't match in HTML.
    // Each external token matches the full "#keyword" pattern (e.g., #region, #if).

    razor_code_block: $ => seq(
      alias($._csharp_code_block_start, '@{'),
      repeat($._razor_block_content),
      alias($._csharp_context_close, '}'),
    ),

    // =========================================================================
    // Razor Expressions
    // =========================================================================

    // Explicit expression: @(expression)
    // Uses external scanner to track entering/exiting C# context
    razor_explicit_expression: $ => seq(
      alias($._csharp_explicit_expr_start, '@('),
      $.expression,
      alias($._csharp_context_close, ')'),
    ),

    // Implicit expression: @identifier, @identifier.property, @identifier.Method()
    // The _implicit_expr_end token is zero-width and matches when whitespace or
    // a non-continuation character follows, forcing the expression to end
    razor_implicit_expression: $ => seq(
      '@',
      $._razor_implicit_expr_chain,
      $._implicit_expr_end,
    ),

    // Chain of member access, method calls, and indexers starting from identifier
    _razor_implicit_expr_chain: $ => choice(
      alias($._razor_await_expression, $.await_expression),
      $._razor_access_chain,
    ),

    // Razor-specific await expression for implicit expressions
    // Uses token.immediate to prevent whitespace between @ and await
    text: $ => prec.right(repeat1($._text_fragment)),

    // Individual text fragments - separated by & or character references
    _text_fragment: $ => choice(
      // Text containing literal @ (email addresses like user@example.com)
      prec(1, $._text_with_literal_at),
      // Regular text content
      prec(-10, /[^<@\[(&]+/),
      // Punctuation that could be expression continuations, but parsed as text
      // when not following an identifier (lower precedence than implicit expressions)
      prec(-20, /[\[(]/),
      // Literal & that doesn't start a valid character reference
      prec(-10, '&'),
    ),

  },
});

/**
 * Creates a rule to match zero or more comma-separated items
 * @param {Rule} rule
 * @returns {ChoiceRule}
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}

/**
 * Creates a rule to match one or more comma-separated items
 * @param {Rule} rule
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
