test/corpus/blazor.txt
================================================================================
Blazor component with parameter
================================================================================
<MyComponent Title="Hello" />
--------------------------------------------------------------------------------

(compilation_unit
  (self_closing_element
    (element_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))))

================================================================================
Blazor component with child content
================================================================================
<Container>
    <p>Child content</p>
</Container>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (element_name))
    (text)
    (element
      (start_tag
        (element_name))
      (text)
      (end_tag
        (element_name)))
    (text)
    (end_tag
      (element_name))))

================================================================================
Razor attribute onclick
================================================================================
<button @onclick="HandleClick">Click me</button>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (element_name)
      (razor_attribute
        (html_attribute_name)
        (html_attribute_value
          (html_quoted_attribute_value))))
    (text)
    (end_tag
      (element_name))))

================================================================================
Razor attribute bind
================================================================================
<input @bind="inputValue" />
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (element_name)
    (razor_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))))

================================================================================
Razor attribute with expression
================================================================================
<button @onclick="@(() => Count++)">Increment</button>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (element_name)
      (razor_attribute
        (html_attribute_name)
        (html_attribute_value
          (html_quoted_attribute_value
            (razor_explicit_expression
              (lambda_expression
                (parameter_list)
                (postfix_unary_expression
                  (identifier))))))))
    (text)
    (end_tag
      (element_name))))

================================================================================
Expression in attribute value
================================================================================
<div class="@cssClass">Content</div>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (element_name)
      (html_attribute
        (html_attribute_name)
        (html_attribute_value
          (html_quoted_attribute_value
            (razor_implicit_expression
              (identifier))))))
    (text)
    (end_tag
      (element_name))))

================================================================================
Multiple expressions in attribute
================================================================================
<div class="@baseClass @conditionalClass">Content</div>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (element_name)
      (html_attribute
        (html_attribute_name)
        (html_attribute_value
          (html_quoted_attribute_value
            (razor_implicit_expression
              (identifier))
            (razor_implicit_expression
              (identifier))))))
    (text)
    (end_tag
      (element_name))))

================================================================================
Unquoted attribute with explicit expression
================================================================================
<PropertyColumn Property=@(s => s.Id) />
--------------------------------------------------------------------------------

(compilation_unit
  (self_closing_element
    (element_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (razor_explicit_expression
          (lambda_expression
            (implicit_parameter)
            (member_access_expression
              (identifier)
              (identifier))))))))

================================================================================
Unquoted attribute with implicit expression
================================================================================
<FluentDataGrid Items=@Model.Items />
--------------------------------------------------------------------------------

(compilation_unit
  (self_closing_element
    (element_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (razor_implicit_expression
          (member_access_expression
            (identifier)
            (identifier)))))))

================================================================================
Await expression
================================================================================
<p>@await LoadDataAsync()</p>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (element_name))
    (razor_implicit_expression
      (await_expression
        (invocation_expression
          (identifier)
          (argument_list))))
    (end_tag
      (element_name))))
