test/corpus/html.txt
================================================================================
DOCTYPE declaration
================================================================================
<!DOCTYPE html>
--------------------------------------------------------------------------------

(compilation_unit
  (doctype))

================================================================================
Simple HTML element
================================================================================
<div>Hello</div>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name))))

================================================================================
Self-closing non-void element
================================================================================
<div/>
--------------------------------------------------------------------------------

(compilation_unit
  (self_closing_element
    (tag_name)))

================================================================================
Tag Helper opt-out element
================================================================================
<!span>Hello</!span>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      name: (tag_name))
    (text)
    (end_tag
      name: (tag_name))))

================================================================================
Nested elements
================================================================================
<div><span>Hello</span></div>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

================================================================================
Element with attribute
================================================================================
<div class="container">Content</div>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name)
      (html_attribute
        (html_attribute_name)
        (html_attribute_value
          (html_quoted_attribute_value))))
    (text)
    (end_tag
      (tag_name))))

================================================================================
Non-void element with multiple attributes
================================================================================
<div class="a" id="b" hidden/>
--------------------------------------------------------------------------------

(compilation_unit
  (self_closing_element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))
    (html_attribute
      (html_attribute_name))))

================================================================================
Boolean attribute
================================================================================
<button disabled>Click</button>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name)
      (html_attribute
        (html_attribute_name)))
    (text)
    (end_tag
      (tag_name))))

================================================================================
Single quoted attribute
================================================================================
<div class='container'></div>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name)
      (html_attribute
        (html_attribute_name)
        (html_attribute_value
          (html_quoted_attribute_value))))
    (end_tag
      (tag_name))))

================================================================================
Script element with content
================================================================================
<script>
    var x = 1;
    console.log(x);
</script>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (raw_text)
    (end_tag
      (tag_name))))

================================================================================
Script element with attribute
================================================================================
<script src="app.js"></script>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name)
      (html_attribute
        (html_attribute_name)
        (html_attribute_value
          (html_quoted_attribute_value))))
    (end_tag
      (tag_name))))

================================================================================
Empty script element
================================================================================
<script></script>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (end_tag
      (tag_name))))

================================================================================
Style element with content
================================================================================
<style>
    body { color: red; }
</style>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (raw_text)
    (end_tag
      (tag_name))))

================================================================================
Style element with attribute
================================================================================
<style type="text/css"></style>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name)
      (html_attribute
        (html_attribute_name)
        (html_attribute_value
          (html_quoted_attribute_value))))
    (end_tag
      (tag_name))))

================================================================================
Script element preserves raw content
================================================================================
<script>if (x < 10 && y > 5) { alert("<div>"); }</script>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (raw_text)
    (end_tag
      (tag_name))))

================================================================================
Title element
================================================================================
<title>Page Title</title>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (escapable_raw_text)
    (end_tag
      (tag_name))))

================================================================================
Empty title element
================================================================================
<title></title>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (end_tag
      (tag_name))))

================================================================================
Textarea element
================================================================================
<textarea>Some text content</textarea>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (escapable_raw_text)
    (end_tag
      (tag_name))))

================================================================================
Textarea with attributes
================================================================================
<textarea name="message" rows="5"></textarea>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name)
      (html_attribute
        (html_attribute_name)
        (html_attribute_value
          (html_quoted_attribute_value)))
      (html_attribute
        (html_attribute_name)
        (html_attribute_value
          (html_quoted_attribute_value))))
    (end_tag
      (tag_name))))

================================================================================
Void element: br
================================================================================
<br>
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)))

================================================================================
Void element: br with optional slash
================================================================================
<br/>
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)))

================================================================================
Void element: hr
================================================================================
<hr>
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)))

================================================================================
Void element: img with attributes
================================================================================
<img src="photo.jpg" alt="A photo">
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))))

================================================================================
Void element: input with attributes
================================================================================
<input type="text" name="username" required>
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))
    (html_attribute
      (html_attribute_name))))

================================================================================
Void element: meta
================================================================================
<meta charset="utf-8">
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))))

================================================================================
Void element: link
================================================================================
<link rel="stylesheet" href="styles.css">
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))))

================================================================================
Void element: base
================================================================================
<base href="https://example.com/">
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))))

================================================================================
Void element: col
================================================================================
<col span="2">
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))))

================================================================================
Void element: embed
================================================================================
<embed src="video.mp4" type="video/mp4">
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))))

================================================================================
Void element: source
================================================================================
<source src="audio.mp3" type="audio/mpeg">
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))))

================================================================================
Void element: track
================================================================================
<track src="subtitles.vtt" kind="subtitles">
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))))

================================================================================
Void element: wbr
================================================================================
<wbr>
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)))

================================================================================
Void element: area
================================================================================
<area shape="rect" coords="0,0,100,100" href="link.html">
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))))

================================================================================
Void element inside element
================================================================================
<div><br></div>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (void_element
      (tag_name))
    (end_tag
      (tag_name))))

================================================================================
Multiple void elements
================================================================================
<br>
<hr>
<br>
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name))
  (void_element
    (tag_name))
  (void_element
    (tag_name)))

================================================================================
Void element case insensitive
================================================================================
<BR>
<Hr>
<iMg src="x.png">
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name))
  (void_element
    (tag_name))
  (void_element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value
        (html_quoted_attribute_value)))))

================================================================================
Void element with Tag Helper opt-out
================================================================================
<!br>
--------------------------------------------------------------------------------

(compilation_unit
  (void_element
    (tag_name)))

================================================================================
Script element case insensitive
================================================================================
<SCRIPT>var x = 1;</SCRIPT>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (raw_text)
    (end_tag
      (tag_name))))

================================================================================
Style element case insensitive
================================================================================
<Style>body { color: red; }</Style>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (raw_text)
    (end_tag
      (tag_name))))

================================================================================
Title element case insensitive
================================================================================
<TITLE>Page Title</TITLE>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (escapable_raw_text)
    (end_tag
      (tag_name))))

================================================================================
Textarea element case insensitive
================================================================================
<TextArea>content</TextArea>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (escapable_raw_text)
    (end_tag
      (tag_name))))

================================================================================
Script content with script-like text that should not terminate
================================================================================
<script>var s = "</scriptx>"; var t = "</scripty";</script>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (raw_text)
    (end_tag
      (tag_name))))

================================================================================
Style content with style-like text that should not terminate
================================================================================
<style>.styler { content: "</styled>"; }</style>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (raw_text)
    (end_tag
      (tag_name))))

================================================================================
Title content with title-like text that should not terminate
================================================================================
<title>The </titlex> Story</title>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (escapable_raw_text)
    (end_tag
      (tag_name))))

================================================================================
Textarea content with textarea-like text that should not terminate
================================================================================
<textarea></textareas> is not the end</textarea>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (escapable_raw_text)
    (end_tag
      (tag_name))))

================================================================================
Named character reference
================================================================================
<p>&amp; &lt; &gt; &nbsp;</p>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (html_character_reference)
    (text)
    (html_character_reference)
    (text)
    (html_character_reference)
    (text)
    (html_character_reference)
    (end_tag
      (tag_name))))

================================================================================
Decimal numeric character reference
================================================================================
<p>&#65;&#66;&#67;</p>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (html_character_reference)
    (html_character_reference)
    (html_character_reference)
    (end_tag
      (tag_name))))

================================================================================
Hexadecimal numeric character reference
================================================================================
<p>&#x41;&#X42;&#x43;</p>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (html_character_reference)
    (html_character_reference)
    (html_character_reference)
    (end_tag
      (tag_name))))

================================================================================
Character reference in attribute value
================================================================================
<a href="?a=1&amp;b=2">link</a>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name)
      (html_attribute
        (html_attribute_name)
        (html_attribute_value
          (html_quoted_attribute_value
            (html_character_reference)))))
    (text)
    (end_tag
      (tag_name))))

================================================================================
Bare ampersand in text
================================================================================
<p>Tom & Jerry</p>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name))))
