test/corpus/razor_comments.txt
================================================================================
Razor comment
================================================================================
@* This is a comment *@
--------------------------------------------------------------------------------

(compilation_unit
  (razor_comment))

================================================================================
Razor comment in element
================================================================================
<div>@* hidden *@visible</div>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (razor_comment)
    (text)
    (end_tag
      (tag_name))))

================================================================================
HTML comment
================================================================================
<!-- This is an HTML comment -->
--------------------------------------------------------------------------------

(compilation_unit
  (html_comment))

================================================================================
HTML comment in element
================================================================================
<div><!-- hidden -->visible</div>
--------------------------------------------------------------------------------

(compilation_unit
  (element
    (start_tag
      (tag_name))
    (html_comment)
    (text)
    (end_tag
      (tag_name))))

================================================================================
C# comments in code block
================================================================================
@{
    /* block comment */
    // line comment
}
--------------------------------------------------------------------------------

(compilation_unit
  (razor_code_block
    (comment)
    (comment)))
